kubernetes-flux/shared/kyverno-system/policy-reporter/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy-reporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: valkey
            io.kubernetes.pod.namespace: cache
      toPorts:
        - ports:
            - port: "6379"
